# Wayfarer

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/recipes/: mavlink-commands.md
examples/: README.md  config.ext.yaml  config.hybrid.yaml  config.min.yaml  wayfarer.config.houston.yaml  wayfarer.config.yaml
houston/config/: broker.config.json
houston/server/src/: index.js
houston/web/: vite.config.js
houston/web/src/: App.jsx  main.jsx  styles.css
pathfinder/: .effective_pathfinder.yaml  README.md  launch_missions.py  main.py  mission_api.py  mission_tracker.py  pathfinder.config.yaml
pathfinder/waypoints/absolute/: alpha.yaml
pathfinder/waypoints/relative/: alpha.yaml  beta.yaml
scripts/: create_venv.sh  run_wayfarer.sh
wayfarer/: README.md  __init__.py
wayfarer/anne x/Nomad/: README.md  pack-electron.sh  package-lock.json  package.json  project_status.readme.md  requirements.txt
wayfarer/cli/: main.py
wayfarer/config/: broker.py  loader.py
wayfarer/core/: bridge.py  command_mapper.py  constants.py  packet.py  registry.py  router.py  utils.py
wayfarer/houston/: README.md  package-lock.json  package.json
wayfarer/houston/config/: broker.config.json  houston.config.json
wayfarer/houston/server/: package.json
wayfarer/houston/web/: index.html  package.json
wayfarer/pathfinder/: broker_config.py  helpers.py  mission_api.py  pathfinder.config.yaml  pathfinder.config_single.yaml  topic_schema.py
wayfarer/routers/: base.py  mqtt_router.py
wayfarer/transports/: base.py  mavlink_general.py  mavlink_serial.py  mavlink_udp.py
(+108 files in other folders)
